--- a/src/components/common/flip-card/flip-card.scss
+++ b/src/components/common/flip-card/flip-card.scss
@@ -3,7 +3,7 @@
   position: relative;
   &__flipper{
     will-change: transform;
-    transition: all .8s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+    transition: all 1s cubic-bezier(0.68, -0.55, 0.265, 1.55);
     // transition: all .6s ease-out;
     transform-style: preserve-3d;
     position: relative;
@@ -14,7 +14,6 @@
   }
   &__front,
   &__back {
-    min-height: 400px;
     width: 100%;
     height: 100%;
     position: relative;
@@ -32,10 +31,7 @@
     bottom: 0;
     transform: rotateY(-180deg);
   }
-  $p: &;
-  &--flipped {
-    #{$p}__flipper{
+  &--flipped &__flipper{
       transform: rotateY(180deg);
-    }
   }
 }
