--- a/src/index.css
+++ b/src/index.css
@@ -1,19 +1,30 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background-color: rgb(16, 36, 82);
-  color: white;
+@font-face {
+  font-family: 'Framework7 Icons';
+  font-style: normal;
+  font-weight: 400;
+  src: url("./fonts/Framework7Icons-Regular.eot");
+  src: url("./fonts/Framework7Icons-Regular.woff2") format("woff2"),
+       url("./fonts/Framework7Icons-Regular.woff") format("woff"),
+       url("./fonts/Framework7Icons-Regular.ttf") format("truetype");
 }
-a{color: white;}
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.f7-icons {
+  font-family: 'Framework7 Icons';
+  font-weight: normal;
+  font-style: normal;
+  font-size: 28px;
+  line-height: 1;
+  letter-spacing: normal;
+  text-transform: none;
+  display: inline-block;
+  white-space: nowrap;
+  word-wrap: normal;
+  direction: ltr;
+  text-rendering: optimizeLegibility;
+  font-feature-settings: "liga" 1;
+  text-align: center;
 }
+
 .page{
   background-color: #2F5D8E;
 }
